2006-01-19  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Moved libmunge.so from devel to libs subpackage.

	* src/libcommon/munge_defs.h:
	  Appended interface version number to MUNGE_SOCKET_NAME.

	* src/libcommon/license.c: Updated copyright date range.

	* src/libcommon/m_msg.c(_msg_unpack):
	  Added cast to discard const qualifier from ptr type.
	* src/munged/zip.c(zip_decompress_length):
	  Added cast to discard const qualifier from ptr type.

	* HISTORY, META, NEWS: Updated for 0.5 release.

2006-01-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c(_gids_hash_create):
	  Ensured endgrent() is called on error.

2006-01-17  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/m_msg.c(_alloc):
	  Added NUL-termination byte to end of memory allocation.
	* src/libmunge/encode.c(_encode_rsp):
	  Removed unnecessary dup of rsp data.
	* src/libmunge/decode.c(_decode_rsp):
	  Removed unnecessary dup of rsp data & realm_str.

	* src/munged/enc.c(enc_fini):
	  Free()d req data before overwriting data ptr with rsp data.

2006-01-12  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/m_msg.c(m_msg_send):
	  Added check for pkt_is_copy before free()ing pkt.
	* src/libcommon/m_msg.c(m_msg_send):
	  Added check for negative length returned from _msg_length().
	* src/libcommon/m_msg.c: Tweaked function documentation.

	* src/munged/dec.c(dec_unarmor):
	  Free()d data after unarmoring to prevent leak in dec_unpack_inner().
	* src/munged/dec.c(dec_unpack_outer):
	  Set realm_is_copy flag to prevent double free of realm_str.

	* src/munged/job.c(job_accept):
	  Added call to destroy msg if m_msg_bind() fails.

	* src/munged/dec.c(dec_decompress): Removed dead code in 'err' label.

	* src/munged/crypto_thread.c: Added checks to abort on error.

	* src/libmunge/decode.c(_decode_rsp):
	  Fixed bug where routine not aborted after EMUNGE_NO_MEMORY set.

	* src/libmunge/ctx.c(_munge_ctx_set_err):
	  Fixed potential NULL dereference of ctx in return value.
