@@ -1,3 +1,8 @@
+2006-01-23  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/munged/auth_recv.c: Updated for new munge message layer.
+	* src/libmunge/auth_send.c: Updated for new munge message layer.
+
 2006-01-19  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* munge.spec: Moved libmunge.so from devel to libs subpackage.
